--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,94 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"colab":{"name":"index.ipynb","provenance":[]}},"cells":[{"cell_type":"code","metadata":{"id":"Ja1xUG-xkuLI"},"source":["#hide\n","from your_lib.core import *"],"execution_count":null,"outputs":[]},{"cell_type":"markdown","metadata":{"id":"ymemkgWqkuLM"},"source":["# Project name here\n","\n","> Summary description here."]},{"cell_type":"markdown","metadata":{"id":"jnMoVvkXkuLN"},"source":["This file will become your README and also the index of your documentation."]},{"cell_type":"markdown","metadata":{"id":"23d2vWCWkuLO"},"source":["## Install"]},{"cell_type":"markdown","metadata":{"id":"gJS55Gg9kuLP"},"source":["`pip install your_project_name`"]},{"cell_type":"markdown","metadata":{"id":"pF5Exox6kuLP"},"source":["## How to use"]},{"cell_type":"markdown","metadata":{"id":"9wbY_PTmkuLQ"},"source":["Fill me in please! Don't forget code examples:"]},{"cell_type":"code","metadata":{"id":"WW285J84kuLQ","outputId":"03fa68b9-270d-4f52-b419-43dd07006f27"},"source":["1+1"],"execution_count":null,"outputs":[{"data":{"text/plain":["2"]},"execution_count":null,"metadata":{},"output_type":"execute_result"}]},{"cell_type":"code","metadata":{"id":"qTqPY4H6kuLS"},"source":[""],"execution_count":null,"outputs":[]}]}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "from your_lib.core import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project name here\n",
+    "\n",
+    "> Summary description here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This file will become your README and also the index of your documentation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Install"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`pip install your_project_name`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to use"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fill me in please! Don't forget code examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
