--- a/nbs/01_tabmodel.ipynb
+++ b/nbs/01_tabmodel.ipynb
@@ -3757,10 +3757,7 @@
      "text": [
       "Converted 00_eda.ipynb.\n",
       "Converted 01_tabmodel.ipynb.\n",
-      "Converted index.ipynb.\n",
-      "converting: /content/drive/MyDrive/colab_notebooks/hmckd/nbs/00_eda.ipynb\n",
-      "converting: /content/drive/MyDrive/colab_notebooks/hmckd/nbs/01_tabmodel.ipynb\n",
-      "converting /content/drive/MyDrive/colab_notebooks/hmckd/nbs/index.ipynb to README.md\n"
+      "Converted index.ipynb.\n"
      ]
     }
    ],
