--- a/nbs/01_tabmodel.ipynb
+++ b/nbs/01_tabmodel.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mounted at /content/drive\n"
+      "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
      ]
     }
    ],
@@ -38,19 +38,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/content/drive/MyDrive/colab_notebooks/hmckd\n",
-      "\u001b[K     |████████████████████████████████| 46 kB 1.9 MB/s \n",
-      "\u001b[K     |████████████████████████████████| 56 kB 3.5 MB/s \n",
-      "\u001b[K     |████████████████████████████████| 61 kB 430 kB/s \n",
-      "\u001b[K     |████████████████████████████████| 51 kB 257 kB/s \n",
-      "\u001b[?25h  Building wheel for dtreeviz (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
+      "Requirement already satisfied: einops in /usr/local/lib/python3.7/dist-packages (0.3.2)\n"
      ]
     }
    ],
    "source": [
     "#hide\n",
-    "%cd '/content/drive/MyDrive/colab_notebooks/hmckd'\n",
-    "!pip3 install -e . -q"
+    "!pip install fastai -Uqq\n",
+    "!pip install einops"
    ]
   },
   {
@@ -62,14 +57,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[?25l\r\u001b[K     |█▊                              | 10 kB 17.8 MB/s eta 0:00:01\r\u001b[K     |███▌                            | 20 kB 23.0 MB/s eta 0:00:01\r\u001b[K     |█████▎                          | 30 kB 12.8 MB/s eta 0:00:01\r\u001b[K     |███████                         | 40 kB 9.4 MB/s eta 0:00:01\r\u001b[K     |████████▉                       | 51 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |██████████▌                     | 61 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |████████████▎                   | 71 kB 5.7 MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 81 kB 6.4 MB/s eta 0:00:01\r\u001b[K     |███████████████▉                | 92 kB 4.7 MB/s eta 0:00:01\r\u001b[K     |█████████████████▋              | 102 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |███████████████████▍            | 112 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 122 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████████▉         | 133 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████████▋       | 143 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▍     | 153 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▏   | 163 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 174 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▋| 184 kB 5.1 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 186 kB 5.1 MB/s \n",
-      "\u001b[?25h"
+      "/content/drive/MyDrive/colab_notebooks/hmckd\n"
      ]
     }
    ],
    "source": [
     "#hide\n",
-    "!pip install fastai -Uqq"
+    "%cd '/content/drive/MyDrive/colab_notebooks/hmckd'\n",
+    "!pip3 install -e . -q"
    ]
   },
   {
@@ -101,7 +96,7 @@
    "outputs": [],
    "source": [
     "#exporti\n",
-    "\n",
+    "from fastai.tabular.all import *\n",
     "from hmckd.utils import get_features, baseline_df, get_tabpandas_dls, med2como\n",
     "\n",
     "def timept_df(features:dict, timept=200, maxtimept=650):\n",
@@ -3757,7 +3752,13 @@
      "text": [
       "Converted 00_eda.ipynb.\n",
       "Converted 01_tabmodel.ipynb.\n",
-      "Converted index.ipynb.\n"
+      "Converted 02_sainttabmodel.ipynb.\n",
+      "Converted 03_conclusion.ipynb.\n",
+      "Converted Untitled0.ipynb.\n",
+      "Converted index.ipynb.\n",
+      "converting: /content/drive/MyDrive/colab_notebooks/hmckd/nbs/Untitled0.ipynb\n",
+      "converting: /content/drive/MyDrive/colab_notebooks/hmckd/nbs/01_tabmodel.ipynb\n",
+      "converting /content/drive/MyDrive/colab_notebooks/hmckd/nbs/index.ipynb to README.md\n"
      ]
     }
    ],
