--- a/nbs/03_conclusion.ipynb
+++ b/nbs/03_conclusion.ipynb
@@ -102,13 +102,13 @@
    "source": [
     "### 1. Defining Inputs\n",
     "\n",
-    "1. Inputs for our `n_setpoints` models\n",
+    "**Inputs for our `n_setpoints` models**\n",
     "\n",
     "*   For features, we are given demographic information, medication information and lab measurements\n",
     "*   lab measurements occur at irregular timepoint across the patients\n",
     "*   also number of lab measurements given differ from patient to patient \n",
     "*   For our n_setpoint models, the contribution from this work defines how we can prepare the inputs for TabularModel despite the challenges posed by the above two points\n",
-    "*   for this, we define/set timepoints closes to which to take lab meaurements for our inputs\n",
+    "*   in buildinng our inputs, we define/set timepoints closes to which to take lab meaurements for our inputs\n",
     "*   we can define `n` number of timepoints\n",
     "*   Our inputs \n",
     "> - are in the form of tabular input where each column is a feature (since we are using TabularModel)\n",
@@ -341,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. `first_n_points` input\n",
+    "**Inputs for our `first_n_points` models**\n",
     "*   This method is very similar to `n_setpoint` except it take the first n_points to be used as the feature\n",
     "* below is an example of this method"
    ]
@@ -561,20 +561,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. The good and bad of the two methods\n",
+    "**The good and bad of the two methods**\n",
     "\n",
     "* our first method (n_setpoits method) \n",
     "> - the good: avoids `nan` values\n",
-    "> - the bad: in some cases uses the same measurement for more than one point\n",
+    "> - the bad: in some cases, this method uses the same measurement for more than one point\n",
     "\n",
     "* our second method (first_n_points)\n",
-    "> - the good: doesn't repeat the same value\n",
+    "> - the good: doesn't repeat the same measurement for different points\n",
     "> - the bad: could result in many `nan` values\n",
     "\n",
-    "4. Remedies for the `nan` values\n",
+    "**Remedies for the `nan` values**\n",
     "> - SAINT TabularModel uses mask to force the transformer to make predicitons without `nan` values\n",
     "\n",
-    "5. Other inputs - medication data\n",
+    "**Other inputs - medication data**\n",
     "> - as part of this challenge, I engaged a Clinical Pharmacist who works at the Kuala Lumpur General Hospital's Nephrology Inpatient Unit\n",
     "> - it became apparent from our discussion that medication data for this task was important \n",
     "> - increase in dosage or addition of a different drug from the same class hints at progressing CKD status\n",
@@ -601,7 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Conclusion"
+    "### 3. Conclusion"
    ]
   },
   {
