--- a/nbs/04_graphnn.ipynb
+++ b/nbs/04_graphnn.ipynb
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Graph NN has gained attention over the past few years especially in life sciencces with AlphaFold dominating the world of medical deep learing. \n",
+    "Graph NN has gained attention over the past few years especially in life sciences with AlphaFold dominating the world of medical deep learning. \n",
     "\n",
     "For our task, graph seems like a natural fit since our data is \"unstructured\" tabular data. A simple search showed that Graph NN is a popular method for EHR data. For example the paper below reviews the recent developments in GNN and EHR data.\n",
     "\n"
